# free-steam-games-list

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  data.csv  pyproject.toml  requirements-dev.txt  requirements.txt  username.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: add_games.yml  bug_report.md  bug_report.yml  delete_game.yml  feature_request.md  feature_request.yml  feedback.yml  off_topic.yml
.github/scripts/: discord_notify.py
.github/workflows/: announce-release-discussion.yml  anti-cheat-list.yml  bot-ingest.yml  check-dead-links.yml  codeql.yml  deploy-pages.yml  ingest-from-issue.yml  ingest-new.yml  mark-dead-games.yml  migrate-schema.yml  notify-ci-failure.yml  notify-deploy.yml  notify-release-pipeline.yml  purge-unhealthy.yml  refetch-all.yml  release-android.yml  release-desktop.yml  top-offline.yml  top-online.yml  update-daily.yml  update-json.yml  update-reviews.yml  update_csv.yml
bash/: anti_cheat.sh  csv_export.sh  daily.sh  dead_links.sh  ingest.sh  json.sh  migrate.sh  offline.sh  online.sh  purge.sh  refetch_all.sh  reviews.sh
data/: data_001.jsonl  data_002.jsonl  data_003.jsonl  data_004.jsonl  data_005.jsonl  index.json
docs/: ACKNOWLEDGEMENTs.md  Contact.md  DISCLAIMER.md  EULA.md  PRIVACY_POLICY.md  THIRD_PARTY.md  ToS.md  android-support.md  dev_env.md  pc_spec.md  telegram-bot.md
docs/i18n/vi/: android-support.md  dev_env.md  pc_spec.md
games/: -.md  .gen-hash  .md  2d-fighter.md  README.md  action-adventure.md  action-rpg-gacha.md  action-rpg.md  action.md  adventure.md  all-games.md  all-games_part1.md  all-games_part10.md  all-games_part11.md  all-games_part12.md  all-games_part13.md  all-games_part14.md  all-games_part15.md  all-games_part16.md  all-games_part17.md  all-games_part18.md  all-games_part2.md  all-games_part3.md  all-games_part4.md  all-games_part5.md  all-games_part6.md  all-games_part7.md  all-games_part8.md  all-games_part9.md  anti-cheat-list.md  arcade.md  arena-shooter.md  auto-battler.md  automation.md  battle-royale.md  beat-'em-up.md  board-game.md  boomer-shooter.md  building.md  bullet-hell.md  (+94 more)
scripts/: check_dead_links.py  check_duplicate.py  data.json  data.jsonl  data.jsonl.bak  dedup_removed_games.py  delete_game.py  export_data.py  generate_anti_cheat_list.py  generate_tables.py  ingest_new.py  mark_dead_games.py  migrate_schema.py  migrate_to_shards.py  normalize_genres.py  purge_unhealthy.py  refetch_all.py  removed_games.jsonl  steam_fetcher.py  temp_info.jsonl  top_offline.py  top_online.py  update_data.py  update_reviews.py  utils.py
scripts/core/: __init__.py  constants.py  data_store.py  fetcher.py  health_checker.py  scraper.py  steam_client.py
web/: .gitignore  README.md  index.html  knip.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/public/: 404.html  robots.txt  sitemap.xml
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src-tauri/: .gitignore  .tauri-signing.key.pub  Cargo.toml  LICENSE_AGREEMENT.rtf  TAURI.md  tauri.conf.json
web/src-tauri/capabilities/: default.json  updater.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
web/src/gpgauth/: README.md
web/src/hooks/: useAndroidUpdateCheck.ts  useCommitContext.ts  useDocumentTitle.ts  useGames.ts  useGpgAutolock.ts  useIsMobile.ts  useIsOwner.ts  useRemovedGames.ts
web/src/i18n/: index.ts
web/src/lib/: android-update.ts  cache.ts  data-store.ts  edits.ts  enums.ts  export.ts  external-link-interceptor.ts  external-open.ts  fetcher.ts  git-data.ts  github-api.ts  gpg.ts  image.ts  jsonl-shard.ts  lazy.ts  legal.ts  oauth-device.ts  optimistic.ts  schema.ts  steam-link.ts  utils.ts  validation.ts  verify-commit.ts  worker-pool.ts
web/src/pages/: About.tsx  Activity.tsx  Add.tsx  AntiCheatList.tsx  Dashboard.tsx  (+6 more)
(+83 files in other folders)
