[package]
name = "f2p-tracker"
version = "1.0.0"
description = "Desktop wrapper around the Steam F2P Tracker web app"
authors = ["poli0981"]
license = "MIT"
repository = "https://github.com/poli0981/free-steam-games-list"
edition = "2021"
rust-version = "1.77"

# https://doc.rust-lang.org/cargo/reference/profiles.html#profile-settings
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
# DO NOT REMOVE: feature flags consumed by the bundled tauri build.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
