[package]
name = "f2p-tracker"
version = "1.2.1"
description = "Desktop wrapper around the Steam F2P Tracker web app"
authors = ["poli0981"]
license = "MIT"
repository = "https://github.com/poli0981/free-steam-games-list"
edition = "2021"
rust-version = "1.77"

# Library crate that both desktop main.rs and the mobile entry point in
# lib.rs link against. Tauri 2 expects the `_lib` suffix to keep the
# library crate name distinct from the binary crate name (otherwise Cargo
# refuses to emit both with the same identifier). The three crate-types
# cover desktop (rlib), iOS (staticlib), and Android (cdylib) — only rlib
# is exercised today, but lib.rs already gates a mobile_entry_point so we
# keep the door open without a second migration.
[lib]
name = "f2p_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# https://doc.rust-lang.org/cargo/reference/profiles.html#profile-settings
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Auto-updater and single-instance plugins are desktop-only — Tauri rejects
# both at compile time on mobile, so we gate the deps behind
# cfg(not(any(target_os="ios", target_os="android"))) inside lib.rs and only
# depend on them for desktop targets here.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"

[features]
# DO NOT REMOVE: feature flags consumed by the bundled tauri build.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
